--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-CLOUDINARY_NAME=dvihmlr8t
-CLOUDINARY_KEY=623434654825363
-CLOUDINARY_SECRET=rTimkJApNc2fwMEpXe-lLk4_DAo
+# CLOUDINARY_NAME=dvihmlr8t
+# CLOUDINARY_KEY=623434654825363
+# CLOUDINARY_SECRET=rTimkJApNc2fwMEpXe-lLk4_DAo
 
 
 
