--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-# CLOUDINARY_NAME=dvihmlr8t
-# CLOUDINARY_KEY=623434654825363
-# CLOUDINARY_SECRET=rTimkJApNc2fwMEpXe-lLk4_DAo
+CLOUDINARY_NAME=dvihmlr8t
+CLOUDINARY_KEY=623434654825363
+CLOUDINARY_SECRET=rTimkJApNc2fwMEpXe-lLk4_DAo
 
 
 
 DATABASE_HOST=cluster0.kpajh.mongodb.net
 DATABASE_SRV=true
-DATABASE_PORT=27017
+DATABASE_PORT=2701S7
 DATABASE_NAME=baseiglesia
 DATABASE_USERNAME=IvanCuenca
 DATABASE_PASSWORD=CuencaRobl3s
